# SFR-Spatial-Frequency-Response-

./: .gitignore  README.md
.scripts/: compile.sh
c++/: CMakeLists.txt
c++/data/ROI/: GTK_ROI_60507.csv  GTK_ROI_60507_result.csv  GTK_ROI_80d13_result.csv  GTK_ROI_8150d.csv  GTK_ROI_8150d_result.csv
c++/data/images/GTK_ROI_80d13/: img_roi_1.png.txt  img_roi_10.png.txt  img_roi_11.png.txt  img_roi_12.png.txt  img_roi_13.png.txt  img_roi_14.png.txt  img_roi_15.png.txt  img_roi_16.png.txt  img_roi_17.png.txt  img_roi_18.png.txt  img_roi_19.png.txt  img_roi_2.png.txt  img_roi_20.png.txt  img_roi_3.png.txt  img_roi_4.png.txt  img_roi_5.png.txt  img_roi_6.png.txt  img_roi_7.png.txt  img_roi_8.png.txt  img_roi_9.png.txt
c++/data/images/rois/: img_roi_11.png.txt  img_roi_12.png.txt  img_roi_13.png.txt  img_roi_14.png.txt  img_roi_16.png.txt  img_roi_18.png.txt  img_roi_19.png.txt  img_roi_2.png.txt  img_roi_3.png.txt  img_roi_5.png.txt  img_roi_6.png.txt  img_roi_7.png.txt  img_roi_9.png.txt
c++/src/: SFRout  compile_sfr.sh  main.cpp  makefile  sfr_utility.cpp  sfr_utility.h  sfr_utility_polyfit.h
data/ROI/: rois.csv
data/config/: config.json
data/images/TestImage/: img_roi_1.png.txt  img_roi_10.png.txt  img_roi_11.png.txt  img_roi_12.png.txt  img_roi_13.png.txt  img_roi_14.png.txt  img_roi_15.png.txt  img_roi_16.png.txt  img_roi_17.png.txt  img_roi_18.png.txt  img_roi_19.png.txt  img_roi_2.png.txt  img_roi_20.png.txt  img_roi_3.png.txt  img_roi_4.png.txt  img_roi_5.png.txt  (+4 more)
python/: README.md
python/test/: SFR_PythonWrapper.ipynb  scrap.ipynb
(+22 files in other folders)
